--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "bcrypt": "^5.0.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "mongoose": "^6.0.10",
+    "express-session": "^1.17.2",
+    "mongoose": "^5.12.7",
     "slugify": "^1.6.1"
   },
   "devDependencies": {
