--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "express-validator": "^6.13.0",
     "mongoose": "^5.12.7",
     "nodemailer": "^6.7.0",
     "slugify": "^1.6.1"
