--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Education Portal",
   "main": "app.js",
   "scripts": {
-    "start": "supervisor app.js"
+    "start": "node app.js"
   },
   "keywords": [
     "education",
@@ -22,7 +22,7 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.13.0",
     "method-override": "^3.0.0",
-    "mongoose": "^5.12.7",
+    "mongoose": "^6.0.12",
     "nodemailer": "^6.7.0",
     "slugify": "^1.6.1"
   },
